--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ django-filter==2.2.0
 djangorestframework==3.10.2
 entrypoints==0.3
 flake8==3.7.8
+future==0.17.1
+gbrennon.cieloApi3==0.1.6
 idna==2.8
 mccabe==0.6.1
 pycodestyle==2.5.0
